# dune-basics

./: .gitignore  .gitpod.yml  README.md  dependencies.sh  prerrequisits.sh  run.sh
dune-basics/: CMakeLists.txt
dune-basics/doc/beamer/: .latexmkrc  CMakeList.txt.sample  CMakeLists.txt  arch4edu.sample  dune-cmake-preamble.tex  dune-cmake-references.bak  dune-cmake-references.bib  dune-cmake.tex  dune-command-line-preamble.tex  dune-command-line.tex  dune-common-preamble.tex  dune-common.tex  dune-docker.tex  dune-doxygen-preamble.tex  dune-doxygen-references.bib  dune-doxygen.tex  dune-git.tex  dune-gitpod-preamble.tex  dune-gitpod.tex  dune-gmsh-preamble.tex  dune-gmsh-references.bib  dune-gmsh.tex  dune-hdnum-references.bib  dune-hdnum.tex  dune-introduction-fem-references.bib  dune-introduction-fem.tex  dunestyle-beamer.sty  main.tex  preamble.tex  references.bib  structure.tex
dune-basics/doc/beamer/cmake/: CMakeList.txt.sample  CMakeLists.txt  cmake-preamble.tex  cmake-references.bib  dune-cmake.tex
dune-basics/doc/beamer/command-line/: CMakeLists.txt  command-line-preamble.tex  dune-command-line.tex
dune-basics/doc/beamer/docker/: CMakeLists.txt  docker-preamble.tex  dune-docker.tex
dune-basics/doc/beamer/fem/: dune-fem.tex  (+3 more)
dune-basics/doc/doxygen/: Doxylocal  bienvenida.md  bienvenida.txt
dune-basics/doxygen-tutorial/: MiDoxigen
dune-basics/dune-book/: l-shape.msh
dune-basics/pydemo/: CMakeLists.txt  dune-common_python.py
dune-basics/sandbox/: CMakeLists.txt  dune-fmt.cc  dune-math-constants.cc  hello-linux.cc
dune-basics/src/: dune-basics.cc
(+29 files in other folders)
